# lux

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  release-plz.toml
.cargo/: config.toml
.config/: hakari.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: continuous-deployment.yml  integration-msvc.yml  integration-tests.yml  nix-build.yml  nix-release-build.yml  release-please.yml  release-plz.yml
lux-bin/src/: build.rs  doc.rs  fetch.rs  info.rs  install_rockspec.rs  pack.rs  sync.rs
lux-cli/: Cargo.toml
lux-cli/resources/test/sample-project-init/: lux.toml
lux-cli/resources/test/sample-projects/init/: .gitignore  lux.toml
lux-cli/resources/test/sample-projects/init/src/: main.lua
lux-cli/src/: add.rs  build.rs  check.rs  completion.rs  debug.rs  doc.rs  exec.rs  fetch.rs  format.rs  generate_rockspec.rs  info.rs  install.rs  install_lua.rs  install_rockspec.rs  lib.rs  lint.rs  list.rs  outdated.rs  pack.rs  path.rs  pin.rs  purge.rs  remove.rs  run.rs  run_lua.rs  shell.rs  test.rs  uninstall.rs  update.rs  upload.rs
lux-cli/src/project/: debug.rs  new.rs
lux-cli/src/utils/: file_tree.rs  github_metadata.rs  install.rs  mod.rs  project.rs
lux-lib/: Cargo.toml
lux-lib/resources/test/: luasystem-0.4.4-1.rockspec  sample-project-0.1.0-1.all.rock  sample_lua_bin_script_invalid
lux-lib/resources/test/sample-project-busted-nlua/: lux.toml
lux-lib/resources/test/sample-project-busted-with-lockfile/: .gitignore
lux-lib/resources/test/sample-project-command-test/: lux.toml
lux-lib/resources/test/sample-project-dependencies/: lux.toml
lux-lib/resources/test/sample-project-extra-rockspec/: extra.rockspec
lux-lib/resources/test/sample-project-git-dependency/: lux.toml
lux-lib/resources/test/sample-project-lua-script-test/: lux.toml  test.lua
lux-lib/resources/test/sample-project-no-source/: lux.toml
lux-lib/resources/test/sample-project-only-src/: lux.toml
lux-lib/resources/test/sample-project-source-template/: lux.toml
lux-lib/resources/test/sample-projects/busted/: lux.toml
lux-lib/resources/test/sample-projects/busted-with-lockfile/: lux.toml
lux-lib/resources/test/sample-projects/command-build/: lux.toml
lux-lib/resources/test/sample-projects/command-test/: Makefile
lux-lib/resources/test/sample-projects/dependencies/: lux.toml
lux-lib/resources/test/sample-projects/extra-rockspec/: lux.toml
lux-lib/resources/test/sample-projects/git-dependency/: lux.toml
lux-lib/resources/test/sample-projects/init/: lux.toml
lux-lib/resources/test/sample-projects/lockfile-missing-deps/: lux.toml
lux-lib/resources/test/sample-projects/no-build-spec/: lux.toml
lux-lib/resources/test/sample-projects/no-source/: lux.toml
lux-lib/resources/test/sample-projects/only-src/src/: foo.lua  main.lua
lux-lib/resources/test/sample-projects/source-template/: lux.toml
lux-lib/src/: hash.rs  lib.rs  lua.rs  path.rs  variables.rs
lux-lib/src/config/: mod.rs  tree.rs
lux-lib/src/git/: mod.rs  shorthand.rs  utils.rs
lux-lib/src/lockfile/: mod.rs
lux-lib/src/lockfile/snapshots/: lux_lib__lockfile__tests__add_rocks.snap  lux_lib__lockfile__tests__parse_lockfile.snap
lux-lib/src/lua_installation/: mod.rs
lux-lib/src/lua_rockspec/: dependency.rs  deploy.rs  mod.rs  partial.rs  platform.rs  rock_source.rs  serde_util.rs  test_spec.rs
lux-lib/src/luarocks/: install_binary_rock.rs  luarocks_installation.rs  rock_manifest.rs
lux-lib/src/manifest/: mod.rs
lux-lib/src/operations/: build_lua.rs  build_project.rs  download.rs  exec.rs  fetch.rs  gen_luarc.rs  install.rs  install_spec.rs  mod.rs  pack.rs  pin.rs  remove.rs  resolve.rs  run.rs  run_lua.rs  sync.rs  test.rs  unpack.rs  update.rs
lux-lib/src/operations/install/: build_dependencies.rs  mod.rs
lux-lib/src/package/: mod.rs  version.rs
lux-lib/src/project/: gen.rs  mod.rs  project_toml.rs
lux-lib/src/remote_package_db/: mod.rs
lux-lib/src/remote_package_source/: mod.rs
lux-lib/src/rockspec/: lua_dependency.rs  mod.rs
lux-lib/src/tree/: list.rs  mod.rs
lux-lib/src/tree/snapshots/: lux_lib__tree__tests__tree_list.snap
lux-lib/src/upload/: mod.rs
lux-lib/src/which/: mod.rs
lux-lib/tests/: build.rs  build_lua.rs  exec.rs  install.rs  luarocks_installation.rs  pack.rs  sync.rs  test.rs  tree.rs
lux-lua/: Cargo.toml
lux-lua/.cargo/: config.toml
lux-lua/src/: config.rs  lib.rs  loader.rs  operations.rs  project.rs
lux-workspace-hack/: Cargo.toml
nix/: overlay.nix
xtask/: Cargo.toml
xtask-lua/: Cargo.toml
xtask-lua/src/: main.rs
xtask/src/: main.rs
