[package]
name = "lux-cli"
version.workspace = true
description = "A luxurious package manager for Lua"
authors = ["vhyrro <vhyrro@gmail.com>", "mrcjkb <marc@jakobi.dev>"]
homepage = "https://github.com/nvim-neorocks/lux"
repository = "https://github.com/nvim-neorocks/lux"
license = "LGPL-3.0+"
readme = "../README.md"
keywords = ["lua", "luarocks", "neovim", "packagemanager", "build"]
categories = ["development-tools", "command-line-utilities"]
edition = "2021"

[[bin]]
name = "lx"
test = false
bench = false

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
eyre = "0.6.12"
git-url-parse = "0.4.5"
git2 = "0.20.2"
inquire = "0.7.5"
itertools = "0.14.0"
nucleo = "0.5.0"
octocrab = "0.44.1"
serde_json = "1.0.140"
spdx = "0.10.8"
spinners = "4.1.1"
stylua = { version = "2.1.0", features = ["fromstr", "lua52"] }
strum = "0.27.1"
strum_macros = "0.27.1"
tempdir = "0.3.7"
termcolor = "1.4.1"
text_trees = "0.1.2"
tokio = { version = "1.45.0", features = ["full"] }
toml = "0.8.22"
walkdir = "2.5.0"
which = "8.0.0"
indicatif = "0.17.11"
path-absolutize = "3.1.1"
url = "2.5.4"
open = "5.3.2"
edit = "0.1.5"
lux-workspace-hack = { version = "0.1", path = "../lux-workspace-hack" }
pathdiff = "0.2.3"
termtree = "0.5.1"
whoami = "1.6.0"
ignore = "0.4.23"
path-slash = "0.2.1"

[dev-dependencies]
serial_test = { version = "3.2.0" }
assert_fs = "1.1.3"

[dependencies.lux-lib]
version = "0.10.1"
path = "../lux-lib/"
features = ["clap"]

[features]
default = ["lua54", "vendored-lua"]
lua51 = ["lux-lib/lua51"]
lua52 = ["lux-lib/lua52"]
lua53 = ["lux-lib/lua53"]
lua54 = ["lux-lib/lua54"]
luajit = ["lux-lib/luajit"]
vendored-lua = ["lux-lib/vendored-lua"]
