[package]
name = "lux-cli"
version.workspace = true
description = "A luxurious package manager for Lua"
authors = ["vhyrro <vhyrro@gmail.com>", "mrcjkb <marc@jakobi.dev>"]
homepage = "https://github.com/nvim-neorocks/lux"
repository = "https://github.com/nvim-neorocks/lux"
license = "LGPL-3.0+"
readme = "../README.md"
keywords = ["lua", "luarocks", "neovim", "packagemanager", "build"]
categories = ["development-tools", "command-line-utilities"]
edition = "2021"

[[bin]]
name = "lx"
test = false
bench = false

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
clap_complete = "4.5.54"
edit = "0.1.5"
eyre = "0.6.12"
inquire = "0.7.5"
nucleo = "0.5.0"
octocrab = "0.44.1"
open = "5.3.2"
spdx = "0.10.8"
spinners = "4.1.1"
termcolor = "1.4.1"
termtree = "0.5.1"
text_trees = "0.1.2"
toml = "0.9.0"
url = "2.5.4"
whoami = "1.6.0"

git-url-parse = { workspace = true }
git2 = { workspace = true }
ignore = { workspace = true }
indicatif = { workspace = true }
itertools = { workspace = true }
lux-workspace-hack = { workspace = true }
path-absolutize = { workspace = true }
path-slash = { workspace = true }
pathdiff = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
stylua = { workspace = true }
tempdir = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }

[dev-dependencies]
serial_test = { version = "3.2.0" }
assert_fs = "1.1.3"

[dependencies.lux-lib]
version = "0.18.1"
path = "../lux-lib/"
features = ["clap"]

[features]
default = ["lua54", "vendored-lua"]
lua51 = ["lux-lib/lua51"]
lua52 = ["lux-lib/lua52"]
lua53 = ["lux-lib/lua53"]
lua54 = ["lux-lib/lua54"]
luajit = ["lux-lib/luajit"]
vendored-lua = ["lux-lib/vendored-lua"]
