[package]
name = "lux-lua"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
lux-lib = { version = "0.2.2", path = "../lux-lib", default-features = false }
mlua = { version = "0.10.1", features = ["module", "async"] }
path-absolutize = "3.1.1"
lux-workspace-hack = { version = "0.1", path = "../lux-workspace-hack" }

[features]
default = ["luajit"]
lua51 = ["mlua/lua51", "lux-lib/lua51"]
lua52 = ["mlua/lua52", "lux-lib/lua52"]
lua53 = ["mlua/lua53", "lux-lib/lua53"]
lua54 = ["mlua/lua54", "lux-lib/lua54"]
luajit = ["mlua/luajit", "lux-lib/luajit"]
