[package]
name = "lux-lua"
version.workspace = true
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
lux-workspace-hack = { workspace = true }
mlua = { workspace = true }
path-absolutize = { workspace = true }

[dependencies.lux-lib]
version = "0.16.0"
path = "../lux-lib"
default-features = false

[dev-dependencies]
assert_fs = "1.1.3"

[features]
lua51 = ["mlua/module", "mlua/lua51", "lux-lib/lua51"]
lua52 = ["mlua/module", "mlua/lua52", "lux-lib/lua52"]
lua53 = ["mlua/module", "mlua/lua53", "lux-lib/lua53"]
lua54 = ["mlua/module", "mlua/lua54", "lux-lib/lua54"]
luajit = ["mlua/module", "mlua/luajit", "lux-lib/luajit"]
# Run tests without module mode so we can link against Lua and run the tests.
test = ["mlua/vendored", "lux-lib/lua51"]
